# experiment-sdl2

./: .ycm_extra_conf.py  CMakeLists.txt  README.md  compile_commands.json
include/: cleanup.h  res_path.h
lesson0/src/: main.cpp
lesson2/: CMakeLists.txt
lesson2/src/: main.cpp
lesson3/: CMakeLists.txt
lesson4/: CMakeLists.txt
lesson4/src/: main.cpp
lesson5/: CMakeLists.txt
lesson5/src/: main.cpp
lesson6/src/: main.cpp
src/lesson1/: CMakeLists.txt  main.cpp
src/lesson2/: CMakeLists.txt  main.cpp
src/lesson3/: CMakeLists.txt  main.cpp
